# syntalos

./: .gitignore  README.md  meson_options.txt
Log/: OrbbecSDK.log.txt
modules/: meson.build
modules/orbbec-module/: README.md  meson.build  orbbec-mod2.cpp  orbbecSettingsDialog.cpp  orbbecSettingsDialog.h  orbbec_camera.cpp  orbbec_camera.h  orbbeccameramodule.cpp  orbbeccameramodule.h  orbbecmodule.cpp  orbbecmodule.h  setup_orbbec.sh  test-mod.cpp
modules/pyorbbec/: meson.build  module.toml  pyorbbec.py  requirements.txt
modules/videorecorder/: recordersettingsdialog.cpp  videowriter.cpp
src/roudi/: main.cpp
syntalos/: pyvenv.cfg
tests/utils/: restructure.py
